# dat251-group-c

./: .git-blame-ignore-revs  .gitattributes  AI-use.md  README.md  et --hard 2919598  package-lock.json  package.json  time.md
.github/workflows/: backend.yml  (+2 more)
backend/: .gitignore  Dockerfile  README.md  db_mocks_presentation.sql  pyproject.toml  sqlc.yaml
backend/app/: auth.py  config.py  main.py  swagger.py
backend/app/db/: db.py
backend/app/db/sqlc/: admin.py  appointment.py  auth.py  bloodbank.py  bookingslot.py  first_table.py  free_appointment.py  models.py  testresults.py
backend/app/lib/: ical.py  norwegian_holidays.py
backend/app/routes/: admin_router.py  appointment_router.py  auth_router.py  bloodbank_router.py  bookingslot_router.py  index_router.py  testresult_router.py
backend/app/schemas/: admin.py  appointment.py  auth.py  bloodbank.py  bookingslot.py  testresult.py
backend/db/: schema.sql
backend/db/migrations/: 20260220105542_init_schema.sql  20260224104045_create_appointment_table.sql  20260305120120_create_free_appointment_table.sql  20260318140440_domain_model_impl.sql  20260323114345_login.sql  20260324105246_admin_changes.sql  20260325144120_donation_test_has_admin.sql  20260325150154_admin_changes.sql
backend/db/queries/: admin.sql  appointment.sql  auth.sql  bloodbank.sql  bookingslot.sql  first_table.sql  free_appointment.sql  testresults.sql
backend/tests/: conftest.py  db_mocks.sql  requests.http  test_admin.py  test_appointment.py  test_auth.py  test_bookingslot.py  test_ical.py  test_index.py  test_testresult.py  util.py
frontend/: .prettierignore  .prettierrc  Dockerfile  README.md  components.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+96 files in other folders)
