[project]
name = "dat251-c-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "gunicorn>=25.1.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.0",
    "isort>=8.0.0",
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pyright]
include = ["app", "tests"]
exclude = ["app/config.py"]

[tool.black]
extend-exclude = "app/db/sqlc"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
skip_glob = ["app/db/sqlc/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
